words двухсторонний перевод

--- a/Golang/MyProgram/words/template/word.html
+++ b/Golang/MyProgram/words/template/word.html
@@ -54,7 +54,7 @@
         font-family: Arial, sans-serif;
         font-size: 36px;
         color: #000000;
-        
+
     }
 
     .btn {
@@ -66,8 +66,13 @@
         font-family: Arial, sans-serif;
         font-size: 36px;
         color: #ffffff;
-       
-       
+
+
+    }
+
+    .btn:hover {
+        background-color: #e0a800;
+        /* Изменяет фоновый цвет кнопки при наведении */
     }
 </style>
 <main>
