--- a/Golang/MyProgram/words/template/footer.html
+++ b/Golang/MyProgram/words/template/footer.html
@@ -1,5 +1,5 @@
 {{define "footer"}}
-<footer>
+<footer class="custom-footer">
     <a href="https://www.tolmachov.dev" style="color: #fff; text-decoration: none;" target="_blank">&copy;
         Tolmachov.dev</a>
 </footer>
