--- a/Golang/MyProgram/words/template/wordNot.html
+++ b/Golang/MyProgram/words/template/wordNot.html
@@ -78,13 +78,22 @@
     .center-text {
         text-align: center;
     }
+
+    .WordOriginalTranscription {
+        font-size: 36px;
+    }
+
+    .WordOriginalSynonyms {
+        font-size: 36px;
+    }
 </style>
 <main>
     <h2 class="center-text"></h2>
 
     <h3 class="center-text error-notification word-translated">{{.WordTranslated}}</h3><br>
     <h3 class="center-text error-notification word-original" id="WordOriginal-text">{{.WordOriginal}}</h3>
-    <h3 class="center-text word-original-transcription">{{.WordOriginalTranscription}}</h3>
+    <h3 class="center-text WordOriginalTranscription">{{.WordOriginalTranscription}}</h3>
+    <h3 class="WordTranslated-text WordOriginalSynonyms">{{.WordOriginalSynonyms}}</h3>
     <form action="/wordOtvet" method="POST" class="form-container">
         <input type="text" name="word" id="word" placeholder="Введите перевод" class="form-control" autofocus><br>
         <button id="speak-button" class="btn btn-info">Play</button>
