--- a/Golang/MyProgram/words/template/wordOk.html
+++ b/Golang/MyProgram/words/template/wordOk.html
@@ -69,14 +69,22 @@
 
 
     }
+
+    .WordOriginalTranscription {
+        font-size: 36px;
+    }
+
+    .WordOriginalSynonyms {
+        font-size: 36px;
+    }
 </style>
 <main>
     <h2 class="center-text"></h2>
 
     <h3 class="center-text error-notification">{{.WordTranslated}}</h3><br>
     <h3 class="WordTranslated-text error-notification" id="WordOriginal-text">{{.WordOriginal}}</h3>
-    <h3 class="WordTranslated-text">{{.WordOriginalTranscription}}</h3>
-    <h3 class="WordTranslated-text">{{.WordOriginalSynonyms}}</h3>
+    <h3 class="WordTranslated-text WordOriginalTranscription">{{.WordOriginalTranscription}}</h3>
+    <h3 class="WordTranslated-text WordOriginalSynonyms">{{.WordOriginalSynonyms}}</h3>
     <button id="speak-button" class="btn btn-info">Play</button>
     <form action="/word" method="POST">
 
