--- a/Golang/MyProgram/words/template/header.html
+++ b/Golang/MyProgram/words/template/header.html
@@ -10,8 +10,10 @@
     <div class="topnav">
         <div class="menu">
             <a href="/word">Study</a>
+
             <a href="/wordAdd">Add word</a>
             <a href="/wordAll">All words</a>
+            <a href="/Settings">Settings</a>
         </div>
     </div>
     {{end}}
